compression setting disabled
test with disabled

--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
     </div>
     <script>
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/build OpenGL najera.loader.js";
+      var loaderUrl = buildUrl + "/najera_cuevas.loader.js";
       var config = {
-        dataUrl: buildUrl + "/build OpenGL najera.data.gz",
-        frameworkUrl: buildUrl + "/build OpenGL najera.framework.js.gz",
-        codeUrl: buildUrl + "/build OpenGL najera.wasm.gz",
+        dataUrl: buildUrl + "/najera_cuevas.data",
+        frameworkUrl: buildUrl + "/najera_cuevas.framework.js",
+        codeUrl: buildUrl + "/najera_cuevas.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "Najera_unity_tactil",
