--- a/index.html
+++ b/index.html
@@ -27,13 +27,13 @@
     </div>
     <script>
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/2.loader.js";
+      var loaderUrl = buildUrl + "/4.loader.js";
       var config = {
-        dataUrl: buildUrl + "/2.data",
-        frameworkUrl: buildUrl + "/2.framework.js",
-        codeUrl: buildUrl + "/2.wasm",
+        dataUrl: buildUrl + "/4.data",
+        frameworkUrl: buildUrl + "/4.framework.js",
+        codeUrl: buildUrl + "/4.wasm",
         streamingAssetsUrl: "StreamingAssets",
-        companyName: "DefaultCompany",
+        companyName: "iralta Films",
         productName: "Najera_unity_tactil",
         productVersion: "0.1",
       };
